// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H1 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
      "paddingTop": 11.7,
    }
  }
>
  "Do all the good you can. By all the means you can. In all the ways you can. In all theplaces you can. At all the times you can. To all the people you can. As long as ever you can." ― John Wesley
</Text>
`;

exports[`the H1 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
      "paddingTop": 11.7,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H1 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 52.2,
      "lineHeight": 54.81,
      "paddingTop": 11.7,
    }
  }
>
  Default H1 text
</Text>
`;
